@@ -20,7 +20,6 @@ class AccessControlPermission  {
  String code  (REQUIRED) ; 
  String rawName (REQUIRED) ; 
  Boolean restricted (REQUIRED) ; 
- Boolean locked (REQUIRED) ;
  Boolean autoGenerated;
 }
 
