@@ -33,12 +33,11 @@ public class AccessControlPermission extends AccessControlPermission_Base implem
         setDomainRoot(pt.ist.fenixframework.FenixFramework.getDomainRoot());
     }
 
-    protected AccessControlPermission(String rawName, Boolean restricted, String code, Boolean locked) {
+    protected AccessControlPermission(String rawName, Boolean restricted, String code) {
         this();
         setRawName(rawName);
         setRestricted(restricted);
         setCode(code);
-        setLocked(locked);
         checkRules();
         CACHE.put(code, Optional.of(this));
     }
@@ -57,14 +56,11 @@ public class AccessControlPermission extends AccessControlPermission_Base implem
         if (getCode() == null) {
             throw new IllegalStateException(AccessControlBundle.get("error.AccessControlPermission.code.required"));
         }
-        if (getLocked() == null) {
-            throw new IllegalStateException(AccessControlBundle.get("error.AccessControlPermission.restricted.required"));
-        }
     }
 
-    public static AccessControlPermission create(String rawName, Boolean restricted, String code, Boolean locked) {
+    public static AccessControlPermission create(String rawName, Boolean restricted, String code) {
         if (findByCode(code) == null) {
-            return new AccessControlPermission(rawName, restricted, code, locked);
+            return new AccessControlPermission(rawName, restricted, code);
         } else {
             throw new IllegalArgumentException(AccessControlBundle.get("error.AccessControlPermission.code.exists", code));
         }
@@ -113,10 +109,6 @@ public class AccessControlPermission extends AccessControlPermission_Base implem
         return getRestricted();
     }
 
-    public Boolean isLocked() {
-        return getLocked();
-    }
-
     public Boolean isAutoGenerated() {
         return Boolean.TRUE.equals(getAutoGenerated());
     }
@@ -156,4 +148,5 @@ public class AccessControlPermission extends AccessControlPermission_Base implem
     public DateTime getCreationDate() {
         return ServiceProvider.getService(VersioningInformationReader.class).getCreationDate(this);
     }
+
 }
