@@ -1,3 +1,5 @@
+- Refactor: Removes locked field from AccessControlPermission entity [#qubIT-Omnis-6964]
+
 2.1.1 (02-09-2024)
 - Improvement: Upgrades parent [#qubIT-Omnis-6687]
 
